# solamarket

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  package.json  pnpm-workspace.yaml
app/: next.config.js  package.json  tailwind.config.ts
building/keeper-bot/: .env.example  package.json  tsconfig.json
building/smart-contract/: Cargo.toml  Makefile
building/smart-contract/src/: entrypoint.rs  error.rs  lib.rs  processor.rs
building/smart-contract/src/instructions/: add_market_to_event.rs  cancel_order.rs  create_event.rs  create_market.rs  fill_order.rs  initialize.rs  merge.rs  mod.rs  place_order.rs  redeem.rs  resolve_event.rs  resolve_market.rs  split.rs  tokenize_position.rs  update_global_config.rs
building/smart-contract/src/state/: event.rs  global_config.rs  market.rs  mod.rs  order.rs  user_position.rs
building/smart-contract/src/utils/: pda.rs
building/wallets/: usdc.json
docs/: README.md
docs/core-concepts/: categories.md  collateral.md  events.md  fee-flow.md  markets.md  negative-risk.md  order-lifecycle.md  positions-and-tokens.md  (+2 more)
keeper/: package.json  tsconfig.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/src/instructions/: cancel_order.rs  create_market.rs  fill_order.rs  merge.rs  mod.rs  place_order.rs  redeem.rs  resolve_market.rs  split.rs  tokenize_position.rs
program/src/state/: market.rs  mod.rs  order.rs  user_position.rs
program/src/utils/: mod.rs  pda.rs  token.rs
scripts/: _common.ts  create-market.ts  fund-wallet.ts  package.json  resolve-market.ts  tsconfig.json
sdk/: package.json  tsconfig.json
(+57 files in other folders)
