[package]
name    = "prediction-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "prediction_market"

[dependencies]
solana-program = { workspace = true }
borsh          = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk          = "1.18"
tokio               = { version = "1", features = ["full"] }
