[package]
name = "solamarket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio                          = "0.9"
pinocchio-pubkey                   = "0.3"
pinocchio-token                    = "0.4"
pinocchio-associated-token-account = "0.2"
pinocchio-system                   = "0.3"
borsh                              = { version = "1", features = ["derive"] }

[dev-dependencies]
solana-program      = "=2.1.0"
solana-program-test = "=2.1.0"
solana-sdk          = "=2.1.0"
tokio               = { version = "1", features = ["full"] }

[profile.release]
overflow-checks = true
lto             = "fat"
codegen-units   = 1

[profile.release.build-override]
opt-level     = 3
incremental   = false
codegen-units = 1
